- Fix bug in InitAlign.py - Create run_aligner.sh to test align locally - Create get_child_data.sh to get data from server - docker/init/run_aligner.sh now can skip if txtgrids exist

--- a/beep_detection_train/Beep_Detection_Model.ipynb
+++ b/beep_detection_train/Beep_Detection_Model.ipynb
@@ -3482,11 +3482,368 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# New Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, glob\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from collections import defaultdict\n",
+    "import wave, struct\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pyAudioAnalysis.ShortTermFeatures as sF\n",
+    "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
+    "from sklearn.model_selection import train_test_split, LeaveOneGroupOut\n",
+    "from sklearn import svm\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from joblib import dump, load\n",
+    "from scipy.signal import find_peaks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Flags\n",
+    "use_delta = False\n",
+    "fWindowSize = 0.02\n",
+    "fStepSize = 0.01\n",
+    "Context = (-2,-1,0,1,2)\n",
+    "working_dir = 'BeepDetModel/'\n",
+    "egs_dir = os.path.join(working_dir,'egs_44')\n",
+    "nFeatures = 68 if use_delta else 34"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Note we have to work on 44k as downsampling to 16k filterout the beep sound\n",
+    "#Feature extraction\n",
+    "#Load CSV file in dictionary of key=filename, value=[(start_beep_time,end_beep_time),]\n",
+    "dBeepTimes = defaultdict(list)\n",
+    "sBeepTimesCSVFile = 'Beep_Times_44.csv'\n",
+    "Beep_Times = pd.read_csv(sBeepTimesCSVFile,header=None)\n",
+    "for index, row in Beep_Times.iterrows():\n",
+    "    sWavFile = row[0]\n",
+    "    i = 1\n",
+    "    while i <= row.size-1:\n",
+    "        #print(i)\n",
+    "        if not np.isnan(row[i]):\n",
+    "            dBeepTimes[sWavFile].append((row[i],row[i+1]))\n",
+    "            i += 2\n",
+    "        else:\n",
+    "            i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "      <th>16</th>\n",
+       "      <th>17</th>\n",
+       "      <th>18</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>recordings_16/rec1.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>recordings_16/rec2.wav</td>\n",
+       "      <td>13.100</td>\n",
+       "      <td>14.100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>recordings_16/rec3.wav</td>\n",
+       "      <td>34.910</td>\n",
+       "      <td>35.910</td>\n",
+       "      <td>194.435</td>\n",
+       "      <td>195.435</td>\n",
+       "      <td>332.318</td>\n",
+       "      <td>333.318</td>\n",
+       "      <td>1050.538</td>\n",
+       "      <td>1051.538</td>\n",
+       "      <td>1065.531</td>\n",
+       "      <td>1066.531</td>\n",
+       "      <td>1268.032</td>\n",
+       "      <td>1269.032</td>\n",
+       "      <td>1357.734</td>\n",
+       "      <td>1358.734</td>\n",
+       "      <td>1391.29</td>\n",
+       "      <td>1392.29</td>\n",
+       "      <td>1422.634</td>\n",
+       "      <td>1423.634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>recordings_16/rec4.wav</td>\n",
+       "      <td>7.210</td>\n",
+       "      <td>8.210</td>\n",
+       "      <td>279.300</td>\n",
+       "      <td>280.300</td>\n",
+       "      <td>380.620</td>\n",
+       "      <td>381.620</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>recordings_16/rec5.wav</td>\n",
+       "      <td>462.639</td>\n",
+       "      <td>463.639</td>\n",
+       "      <td>598.610</td>\n",
+       "      <td>599.610</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>recordings_16/rec6.wav</td>\n",
+       "      <td>16.890</td>\n",
+       "      <td>17.890</td>\n",
+       "      <td>152.610</td>\n",
+       "      <td>153.610</td>\n",
+       "      <td>400.130</td>\n",
+       "      <td>401.130</td>\n",
+       "      <td>706.590</td>\n",
+       "      <td>707.590</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>recordings_16/rec7.wav</td>\n",
+       "      <td>4.120</td>\n",
+       "      <td>5.120</td>\n",
+       "      <td>506.177</td>\n",
+       "      <td>507.177</td>\n",
+       "      <td>799.950</td>\n",
+       "      <td>800.950</td>\n",
+       "      <td>873.780</td>\n",
+       "      <td>874.780</td>\n",
+       "      <td>1432.950</td>\n",
+       "      <td>1433.950</td>\n",
+       "      <td>1469.410</td>\n",
+       "      <td>1470.410</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>recordings_16/rec8.wav</td>\n",
+       "      <td>30.660</td>\n",
+       "      <td>31.660</td>\n",
+       "      <td>552.848</td>\n",
+       "      <td>553.848</td>\n",
+       "      <td>1334.750</td>\n",
+       "      <td>1335.750</td>\n",
+       "      <td>2225.890</td>\n",
+       "      <td>2226.890</td>\n",
+       "      <td>2248.935</td>\n",
+       "      <td>2249.935</td>\n",
+       "      <td>2744.709</td>\n",
+       "      <td>2745.709</td>\n",
+       "      <td>3403.236</td>\n",
+       "      <td>3404.236</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>recordings_16/rec9.wav</td>\n",
+       "      <td>103.467</td>\n",
+       "      <td>104.467</td>\n",
+       "      <td>502.045</td>\n",
+       "      <td>503.050</td>\n",
+       "      <td>1222.970</td>\n",
+       "      <td>1223.970</td>\n",
+       "      <td>2217.630</td>\n",
+       "      <td>2218.630</td>\n",
+       "      <td>2682.876</td>\n",
+       "      <td>2683.876</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       0        1        2        3        4         5   \\\n",
+       "0  recordings_16/rec1.wav      NaN      NaN      NaN      NaN       NaN   \n",
+       "1  recordings_16/rec2.wav   13.100   14.100      NaN      NaN       NaN   \n",
+       "2  recordings_16/rec3.wav   34.910   35.910  194.435  195.435   332.318   \n",
+       "3  recordings_16/rec4.wav    7.210    8.210  279.300  280.300   380.620   \n",
+       "4  recordings_16/rec5.wav  462.639  463.639  598.610  599.610       NaN   \n",
+       "5  recordings_16/rec6.wav   16.890   17.890  152.610  153.610   400.130   \n",
+       "6  recordings_16/rec7.wav    4.120    5.120  506.177  507.177   799.950   \n",
+       "7  recordings_16/rec8.wav   30.660   31.660  552.848  553.848  1334.750   \n",
+       "8  recordings_16/rec9.wav  103.467  104.467  502.045  503.050  1222.970   \n",
+       "\n",
+       "         6         7         8         9         10        11        12  \\\n",
+       "0       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+       "1       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+       "2   333.318  1050.538  1051.538  1065.531  1066.531  1268.032  1269.032   \n",
+       "3   381.620       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+       "4       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+       "5   401.130   706.590   707.590       NaN       NaN       NaN       NaN   \n",
+       "6   800.950   873.780   874.780  1432.950  1433.950  1469.410  1470.410   \n",
+       "7  1335.750  2225.890  2226.890  2248.935  2249.935  2744.709  2745.709   \n",
+       "8  1223.970  2217.630  2218.630  2682.876  2683.876       NaN       NaN   \n",
+       "\n",
+       "         13        14       15       16        17        18  \n",
+       "0       NaN       NaN      NaN      NaN       NaN       NaN  \n",
+       "1       NaN       NaN      NaN      NaN       NaN       NaN  \n",
+       "2  1357.734  1358.734  1391.29  1392.29  1422.634  1423.634  \n",
+       "3       NaN       NaN      NaN      NaN       NaN       NaN  \n",
+       "4       NaN       NaN      NaN      NaN       NaN       NaN  \n",
+       "5       NaN       NaN      NaN      NaN       NaN       NaN  \n",
+       "6       NaN       NaN      NaN      NaN       NaN       NaN  \n",
+       "7  3403.236  3404.236      NaN      NaN       NaN       NaN  \n",
+       "8       NaN       NaN      NaN      NaN       NaN       NaN  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Beep_Times"
+   ]
   },
   {
    "cell_type": "code",
