--- a/process.ipynb
+++ b/process.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "id": "cf666b9b-8a80-4b1c-9bc1-bcf534645676",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Run IBM ASR"
    ]
@@ -183,7 +186,10 @@
   {
    "cell_type": "markdown",
    "id": "552d11cd-58cb-4204-b4c0-f217c59313e6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Kaldi ASR"
    ]
@@ -1626,6 +1632,7 @@
    "cell_type": "markdown",
    "id": "069a7851-2477-4701-8d78-02be76e384b9",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2097,7 +2104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "af67cd12-47ba-4b6e-abfa-4d2b6fb0921b",
    "metadata": {},
    "outputs": [],
@@ -2113,7 +2120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "8aff532a-36d4-485b-8b21-91d31ee5773b",
    "metadata": {},
    "outputs": [],
@@ -2130,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1fea05e5-3eb3-4115-9ea1-a91dcc7ba2c0",
    "metadata": {},
    "outputs": [
@@ -2152,7 +2159,7 @@
        " {'Tables_in_auskidtalk_prod': 'words'}]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2163,35 +2170,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "6c6f4e6e-f735-4d38-8ebd-866d2f0a3982",
+   "execution_count": 16,
+   "id": "6a49b215-9ec2-4525-8b46-f9ec8ad265dd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Get children with complete session\n",
     "connector = mysql.connector.connect(user=UserName, password=Password,\n",
     "                              host=HostIP,\n",
     "                              database=DatabaseName,buffered=True)\n",
     "cursor = connector.cursor(buffered=True, dictionary=True)\n",
-    "iChildID = 325\n",
-    "query = (\"SELECT * FROM task_start_end_times WHERE child_id={0}\".format(iChildID))\n",
+    "query = (\"SELECT * FROM SESSION_PROGRESS WHERE current_task=5 AND current_question=41\")\n",
     "cursor.execute(query)\n",
-    "results = cursor.fetchall()"
+    "results = cursor.fetchall()\n",
+    "df = pd.DataFrame.from_dict(results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "49c6246f-b273-4cf4-af94-86194c89ce2f",
+   "execution_count": 18,
+   "id": "9c8291f8-4442-4418-94bd-239b86c346ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      4\n",
+       "1     82\n",
+       "2     97\n",
+       "3     98\n",
+       "4    144\n",
+       "5    178\n",
+       "6    179\n",
+       "7    198\n",
+       "8    203\n",
+       "9    215\n",
+       "Name: child_id, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(10).child_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1f737dcc-3114-4fc6-bf43-d7ad0be61def",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdChild_Task = pd.DataFrame.from_dict(results)"
+    "#Get children with complete session\n",
+    "connector = mysql.connector.connect(user=UserName, password=Password,\n",
+    "                              host=HostIP,\n",
+    "                              database=DatabaseName,buffered=True)\n",
+    "cursor = connector.cursor(buffered=True, dictionary=True)\n",
+    "query = (\"SELECT * FROM child\")# WHERE current_task=5 AND current_question=41\")\n",
+    "cursor.execute(query)\n",
+    "results = cursor.fetchall()\n",
+    "df = pd.DataFrame.from_dict(results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "6e265f02-9f2b-4ce6-b164-098ef601501d",
+   "execution_count": 10,
+   "id": "8adefcb6-c527-4753-b079-e6cdaf9cd9cf",
    "metadata": {},
    "outputs": [
     {
@@ -2215,68 +2262,193 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>child_id</th>\n",
+       "      <th>id</th>\n",
        "      <th>ra_id</th>\n",
-       "      <th>task1_start_time</th>\n",
-       "      <th>task1_end_time</th>\n",
-       "      <th>task1_start_time_2</th>\n",
-       "      <th>task1_end_time_2</th>\n",
-       "      <th>task2_start_time</th>\n",
-       "      <th>task2_end_time</th>\n",
-       "      <th>task3_start_time</th>\n",
-       "      <th>task3_end_time</th>\n",
-       "      <th>task4_start_time</th>\n",
-       "      <th>task4_end_time</th>\n",
-       "      <th>task5_start_time</th>\n",
-       "      <th>task5_end_time</th>\n",
+       "      <th>name</th>\n",
+       "      <th>location_id</th>\n",
+       "      <th>token</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>325</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2020-12-01 17:12:15.612</td>\n",
-       "      <td>2020-12-01 17:22:20.553</td>\n",
-       "      <td>2020-12-01 17:23:04.165</td>\n",
-       "      <td>2020-12-01 17:38:45.291</td>\n",
-       "      <td>2020-12-01 17:40:33.423</td>\n",
-       "      <td>2020-12-01 17:51:37.611</td>\n",
-       "      <td>2020-12-01 17:52:46.519</td>\n",
-       "      <td>2020-12-01 17:56:32.232</td>\n",
-       "      <td>2020-12-01 17:59:03.804</td>\n",
-       "      <td>2020-12-01 18:04:16.367</td>\n",
-       "      <td>2020-12-01 18:09:42.418</td>\n",
-       "      <td>2020-12-01 18:16:50.326</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>fLhYH1TiWs0:APA91bGd6d_Bw6N81jR8vyLynGFog3c4qB...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>3</td>\n",
+       "      <td>ehIx3aphHRE:APA91bFKnMaSrIMUwIRSC-1bc4d5zGjVh2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>760</th>\n",
+       "      <td>761</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>5</td>\n",
+       "      <td>eMvVAqccpaQ:APA91bHXiUJTBvmWyZ5cK4OITsylSF-LJE...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>761</th>\n",
+       "      <td>762</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>5</td>\n",
+       "      <td>frKKdLjtSBw:APA91bGBhzcOu1EpHk4TVeJ39GlGQSZIQ7...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>762</th>\n",
+       "      <td>763</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>5</td>\n",
+       "      <td>frKKdLjtSBw:APA91bGBhzcOu1EpHk4TVeJ39GlGQSZIQ7...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>763</th>\n",
+       "      <td>764</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>5</td>\n",
+       "      <td>frKKdLjtSBw:APA91bGBhzcOu1EpHk4TVeJ39GlGQSZIQ7...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>764</th>\n",
+       "      <td>765</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>765 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   child_id  ra_id         task1_start_time           task1_end_time  \\\n",
-       "0       325     11  2020-12-01 17:12:15.612  2020-12-01 17:22:20.553   \n",
+       "      id  ra_id name  location_id  \\\n",
+       "0      1      0                 3   \n",
+       "1      2      0                 3   \n",
+       "2      3      0                 1   \n",
+       "3      4      0                 3   \n",
+       "4      5      0                 3   \n",
+       "..   ...    ...  ...          ...   \n",
+       "760  761      0                 5   \n",
+       "761  762      0                 5   \n",
+       "762  763      0                 5   \n",
+       "763  764      0                 5   \n",
+       "764  765      0                 0   \n",
        "\n",
-       "        task1_start_time_2         task1_end_time_2         task2_start_time  \\\n",
-       "0  2020-12-01 17:23:04.165  2020-12-01 17:38:45.291  2020-12-01 17:40:33.423   \n",
+       "                                                 token  \n",
+       "0                                                       \n",
+       "1                                                       \n",
+       "2    fLhYH1TiWs0:APA91bGd6d_Bw6N81jR8vyLynGFog3c4qB...  \n",
+       "3    ehIx3aphHRE:APA91bFKnMaSrIMUwIRSC-1bc4d5zGjVh2...  \n",
+       "4                                                       \n",
+       "..                                                 ...  \n",
+       "760  eMvVAqccpaQ:APA91bHXiUJTBvmWyZ5cK4OITsylSF-LJE...  \n",
+       "761  frKKdLjtSBw:APA91bGBhzcOu1EpHk4TVeJ39GlGQSZIQ7...  \n",
+       "762  frKKdLjtSBw:APA91bGBhzcOu1EpHk4TVeJ39GlGQSZIQ7...  \n",
+       "763  frKKdLjtSBw:APA91bGBhzcOu1EpHk4TVeJ39GlGQSZIQ7...  \n",
+       "764                                                     \n",
        "\n",
-       "            task2_end_time         task3_start_time           task3_end_time  \\\n",
-       "0  2020-12-01 17:51:37.611  2020-12-01 17:52:46.519  2020-12-01 17:56:32.232   \n",
-       "\n",
-       "          task4_start_time           task4_end_time         task5_start_time  \\\n",
-       "0  2020-12-01 17:59:03.804  2020-12-01 18:04:16.367  2020-12-01 18:09:42.418   \n",
-       "\n",
-       "            task5_end_time  \n",
-       "0  2020-12-01 18:16:50.326  "
+       "[765 rows x 5 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pdChild_Task"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6c6f4e6e-f735-4d38-8ebd-866d2f0a3982",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connector = mysql.connector.connect(user=UserName, password=Password,\n",
+    "                              host=HostIP,\n",
+    "                              database=DatabaseName,buffered=True)\n",
+    "cursor = connector.cursor(buffered=True, dictionary=True)\n",
+    "iChildID = 178\n",
+    "query = (\"SELECT * FROM task_start_end_times WHERE child_id={0}\".format(iChildID))\n",
+    "cursor.execute(query)\n",
+    "results = cursor.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "49c6246f-b273-4cf4-af94-86194c89ce2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdChild_Task = pd.DataFrame.from_dict(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6e265f02-9f2b-4ce6-b164-098ef601501d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "Name: task1_start_time, dtype: bool"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.isnull(pdChild_Task.task1_start_time)"
    ]
   },
   {
@@ -3680,7 +3852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 4,
    "id": "752ce22e-f38a-48d5-bbde-da155c271ec7",
    "metadata": {},
    "outputs": [],
@@ -3697,28 +3869,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 5,
    "id": "26ba320f-7b95-4baa-ba80-6fc7f04ff635",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       733\n",
-       "1        65\n",
-       "2        81\n",
-       "3       460\n",
-       "4       461\n",
-       "       ... \n",
-       "267    1147\n",
-       "268    1089\n",
-       "269    1318\n",
-       "270      62\n",
-       "271      67\n",
-       "Name: child_id, Length: 272, dtype: int64"
+       "0        4\n",
+       "1       82\n",
+       "2       97\n",
+       "3       98\n",
+       "4      144\n",
+       "      ... \n",
+       "175    689\n",
+       "176    690\n",
+       "177    694\n",
+       "178    714\n",
+       "179    719\n",
+       "Name: child_id, Length: 180, dtype: int64"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
