--- a/process.ipynb
+++ b/process.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "id": "cf666b9b-8a80-4b1c-9bc1-bcf534645676",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -187,7 +186,6 @@
    "cell_type": "markdown",
    "id": "552d11cd-58cb-4204-b4c0-f217c59313e6",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -6090,6 +6088,196 @@
    "source": [
     "os.makedirs()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bf4c7a7e-f1f0-4070-a8cd-ed1a03465cb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tools.txtgrid_master.TextGrid_Master as tgm\n",
+    "import tools.comm_asr_from_txtgrid as cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b5a9e70c-a3d7-4236-b0ae-22152a75588f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "txtgrid_ibm = '/media/Windows/root/AusKidTalkv2/samples/test2/annotate1/97/txtgrids/97_task1_ibm.TextGrid'\n",
+    "dTiers = tgm.ParseTxtGrd(txtgrid_ibm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fa4cc7dd-ebbe-49a5-a830-def5cf7942fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dTiers_m = tgm.Merge_labels(dTiers,min_sil_dur=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37d60947-8993-41e5-8d16-68f05f3bb8eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dTiers_m['m-spk3']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8d42638c-0730-4ede-8f37-48ce68df699e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_spk3 = cm.get_valid_data(txtgrid_ibm, sPromptTier='spk3',offset=0.5,bMerge=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ee2a439e-f2ff-4fb2-81be-2fa3fba74696",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>end_time</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>70.04</td>\n",
+       "      <td>72.00</td>\n",
+       "      <td>despite the web</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>72.86</td>\n",
+       "      <td>74.53</td>\n",
+       "      <td>by the way</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>79.54</td>\n",
+       "      <td>81.88</td>\n",
+       "      <td>his father's</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>82.58</td>\n",
+       "      <td>83.94</td>\n",
+       "      <td>to</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>85.81</td>\n",
+       "      <td>87.60</td>\n",
+       "      <td>a big</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>283</th>\n",
+       "      <td>896.24</td>\n",
+       "      <td>897.57</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>285</th>\n",
+       "      <td>903.94</td>\n",
+       "      <td>905.49</td>\n",
+       "      <td>full</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287</th>\n",
+       "      <td>909.66</td>\n",
+       "      <td>911.67</td>\n",
+       "      <td>one oh clock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>289</th>\n",
+       "      <td>913.19</td>\n",
+       "      <td>915.14</td>\n",
+       "      <td>to work lock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>291</th>\n",
+       "      <td>916.49</td>\n",
+       "      <td>918.58</td>\n",
+       "      <td>three o'clock</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>126 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     start_time  end_time             label\n",
+       "41        70.04     72.00   despite the web\n",
+       "43        72.86     74.53        by the way\n",
+       "45        79.54     81.88      his father's\n",
+       "47        82.58     83.94                to\n",
+       "49        85.81     87.60             a big\n",
+       "..          ...       ...               ...\n",
+       "283      896.24    897.57                 a\n",
+       "285      903.94    905.49              full\n",
+       "287      909.66    911.67      one oh clock\n",
+       "289      913.19    915.14      to work lock\n",
+       "291      916.49    918.58     three o'clock\n",
+       "\n",
+       "[126 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_spk3[data_spk3.start_time > 70]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "316b105a-e423-4cff-8bbb-63657513b4c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
