Fix bug in TextGrid_Master.py

--- a/process.ipynb
+++ b/process.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "id": "cf666b9b-8a80-4b1c-9bc1-bcf534645676",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -186,6 +187,7 @@
    "cell_type": "markdown",
    "id": "552d11cd-58cb-4204-b4c0-f217c59313e6",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2095,7 +2097,10 @@
   {
    "cell_type": "markdown",
    "id": "139139c5-7500-472b-b25d-b7ed3e3d500d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# SQL"
    ]
@@ -4436,7 +4441,10 @@
   {
    "cell_type": "markdown",
    "id": "bfd5ead2-6aaf-4650-bc48-46db1e7e98cb",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Kaldi_code"
    ]
